Me/deploy/k8s/base/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: medicore
spec:
  replicas: 2
  selector:
    matchLabels: { app: auth }
  template:
    metadata:
      labels: { app: auth }
    spec:
      containers:
        - name: auth
          image: medicore/auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: medicore
spec:
  selector:
    app: auth
  ports:
    - port: 8081
      targetPort: 8081
