Me/deploy/k8s/base/cds.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cds
  namespace: medicore
  labels: { app: cds }
spec:
  replicas: 2
  selector:
    matchLabels: { app: cds }
  template:
    metadata:
      labels: { app: cds }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: cds
          image: medicore/cds:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          startupProbe:
            httpGet: { path: /health, port: http }
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet: { path: /health, port: http }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: http }
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "512Mi" }
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Service
metadata:
  name: cds
  namespace: medicore
spec:
  selector:
    app: cds
  ports:
    - name: http
      port: 8083
      targetPort: http
